# hi-csg-r

./: .gitignore  pyproject.toml
data/gold_subset/protocols/: make_pdfs.py
data/gold_subset/protocols/hi_csg_r_pilot10/: P001_protocol.md  (+9 more)
data/pilot/: graph_pilot_smoke_40.jsonl  graph_pilot_v1.jsonl  graph_pilot_v1_summary.json  graph_pilot_v2.jsonl  graph_pilot_v2_summary.json
data/reports/: hkr_forms_inspect.txt  hkr_words_inspect.txt  hwr200_inspect_details.txt  raw_inventory.json  school_notebooks_inspect.txt
data/reports/cyrillic_handwriting/: alphabet_report.json  dataset_issues.csv  dataset_stats.json  duplicate_groups_report.csv  summary_report.md
data/reports/hkr_forms/: alphabet_report.json  dataset_issues.csv  dataset_stats.json  summary_report.md
data/reports/hkr_words/: alphabet_report.json  dataset_issues.csv  dataset_stats.json  summary_report.md
data/reports/hwr200/: alphabet_report.json  dataset_stats.json  hwr200_failed_pages_report.csv  summary_report.md
data/reports/iam/: alphabet_report.json  dataset_issues.csv  dataset_stats.json  summary_report.md
data/reports/school_notebooks/: alphabet_report.json  dataset_stats.json  summary_report.md  text_leakage_report.json
data/reports/school_notebooks_pilot/: alphabet_report.json  dataset_issues.csv  dataset_stats.json
docs/: 00_research_problem.md  01_data_audit_and_preprocessing.md  02_hi_csg_r_schema_and_graph_pilot.md
src/datasets/: cyrillic_handwriting.py  hkr_forms.py  hkr_words.py  hwr200.py  iam.py  metadata.py  school_notebooks.py  splits.py  text_normalization.py  validate_dataset.py
src/graph/: binarization.py  component_filter.py  diagnostics.py  graph_builder.py  graph_io.py  graph_schema.py  grid_suppression.py  pixel_graph.py  skeletonize.py
src/preprocessing/: feature_preprocess.py  image_io.py  ocr_preprocess.py
src/visualization/: draw_graph.py
tools/: check_duplicate_leakage.py  check_iam_writer_split.py  check_school_notebooks_text_leakage.py  create_cyrillic_clean_split.py  create_graph_pilot_smoke_subset.py  create_graph_pilot_subset.py  create_graph_pilot_v2.py  create_hkr_words_text_split.py  create_hwr200_paired_index.py  create_hwr200_splits.py  inspect_hkr_forms.py  inspect_hkr_words.py  inspect_hwr200_details.py  inspect_iam.py  inspect_raw_datasets.py  inspect_school_notebooks.py  make_cyrillic_dataset_report.py  make_graph_pilot_report.py  make_hkr_forms_dataset_report.py  make_hkr_words_dataset_report.py  make_hwr200_dataset_report.py  make_iam_dataset_report.py  make_ocr_variant_preview.py  make_preprocessing_preview.py  make_school_notebooks_dataset_report.py  preprocess_hwr200_pages.py  report_hwr200_failed_pages.py  run_binary_skeleton_pilot.py  run_component_filter_experiment.py  run_graph_builder_pilot.py  select_graph_failure_cases.py  summarize_binary_skeleton_pilot.py  summarize_component_filter_experiment.py  summarize_graph_builder_pilot.py
(+10 files in other folders)
