[project]
name = "hi-csg-r"
version = "0.1.0"
description = "Handwriting-Informed Robust Canonical Stroke Graphs for Offline Russian-English Handwritten Text Recognition"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "Apache-2.0"
authors = [
  { name = "YOUR_NAME" }
]

dependencies = [
  # Core
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "tqdm>=4.66",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "omegaconf>=2.3",
  "hydra-core>=1.3",
  "rich>=13.7",
  "typer>=0.12",
  "loguru>=0.7",
  # Images / CV / skeletonization
  "opencv-python-headless>=4.9",
  "pillow>=10.3",
  "scikit-image>=0.23",
  "matplotlib>=3.8",
  # Graphs / geometry / vector export
  "networkx>=3.3",
  "shapely>=2.0",
  "svgwrite>=1.4",
  # Metrics / utilities
  "scikit-learn>=1.5",
  "jiwer>=3.0",
  "rapidfuzz>=3.9",
  # Dataset helpers
  "requests>=2.32",
  "huggingface-hub>=0.23",
  "datasets>=2.19",
  "reportlab>=3.6",
  "pypdf>=3.0",
  "scipy-stubs~=1.17.1",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
]

ml = [
  # PyTorch ставится из PyTorch index ниже.
  "torch>=2.3",
  "torchvision>=0.18",

  # OCR / HTR / Transformer baselines
  "transformers>=4.41",
  "accelerate>=0.31",
  "evaluate>=0.4",
  "safetensors>=0.4",
  "timm>=1.0",
]

gnn-pyg = [
  # PyG с версии 2.3 можно ставить как torch-geometric поверх PyTorch.
  "torch-geometric>=2.5",
]

gnn-dgl = [
  # Альтернатива PyG. Не ставь одновременно без необходимости.
  "dgl>=2.2",
]

experiments = [
  "wandb>=0.17",
  "mlflow>=2.14",
  "lightgbm>=4.4",
]

docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

annotation = [
  "label-studio>=1.12",
]

[tool.uv]
package = false

# CPU-safe default для PyTorch.
# Для CUDA замени url ниже на нужный, например:
# https://download.pytorch.org/whl/cu121
# https://download.pytorch.org/whl/cu124
# https://download.pytorch.org/whl/cu126
#
# uv позволяет закреплять отдельные пакеты за отдельными index-ами через
# tool.uv.sources + [[tool.uv.index]].
# Это особенно полезно для PyTorch, потому что CPU/CUDA wheels лежат на отдельных индексах.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]
ignore = [
  "E501",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
